<resources>
    <string name="app_name">ProductManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_register">REGISTER</string>
    <string name="txt_login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="err_login">Email or Password incorrect</string>
    <string name="welcome_user">Welcome!</string>
    <string name="hint_usrname">Name</string>
    <string name="hint_usremail">Email</string>
    <string name="hint_usrpassword">Password</string>
    <string name="succes">Succes!</string>
    <string name="txt_logout">Log out</string>
    <string name="txt_SignInGoogle">Sign in with Google</string>
    <string name="title_activity_home_user">HomeUserActivity</string>
    <string name="title_tools">Tools</string>
    <string name="title_users">Users</string>
    <string name="title_projects">Projects</string>
    <string name="title_locations">Locations</string>
    <string name="title_incidences">Incidences</string>
    <string name="hint_search">¿Qué estás buscando?</string>
    <string name="hint_enterbarcode">Scan or write the barcode</string>
    <string name="hint_incident">Describe the incident</string>
    <string name="title_toolrental">Tool Rental</string>
    <string name="title_toolreturns">Tool Returns</string>
    <string name="title_loands">My Loands</string>
    <string name="title_incidents">Incidents</string>
    <string name="prefs_file">com.example.productmanager.PREFERENCE_FILE_KEY</string>
    <string name="oauth_id">1:486005734834:android:d15601d4ad00dea17b38ab</string>
    <string name="default_web_client_id">486005734834-1f1jnljdkkrghm30a41l8jdrrc108vs9.apps.googleusercontent.com</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="hint_toolname">Tool name</string>
    <string name="hint_name">Name</string>
    <string name="txt_search">Search</string>
    <string name="hint_project">Project</string>
    <string name="hint_location">Location</string>
    <string name="hint_description">Description</string>
    <string name="txt_modify">Modify</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_scan">SCAN</string>
    <string name="title_logout">Logout</string>
    <string name="title_options">Options</string>
    <string name="db_save_error">*Something whent wrong, please try again</string>
    <string name="db_searchOrdelete_error">*Please, first write a project name here</string>
    <string name="txt_save">Save</string>
    <string name="db_project_search_delete_error">Error: Project not found, please check name project</string>
    <string name="db_project_search_delete_succes">Succes!</string>
    <string name="hint_date">01_10_2023</string>
    <string name="txt_user">User</string>
    <string name="txt_tool">Tool</string>
    <string name="txt_solved">Solved</string>
    <string name="title_activity_user">activity_user</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_rental">Rental</string>
    <string name="title_returns">Returns</string>
    <string name="hint_whatareyoulookingor">¿Qué estás buscando?</string>
    <string name="txt_description">Description tool</string>
    <string name="txt_project">Project</string>
    <string name="txt_status">Status:</string>
    <string name="status">Available</string>
    <string name="txt_book">BOOK</string>
    <string name="txt_barcode">barcode</string>
    <string name="hint_urlphoto">URL Photo</string>
    <string name="empty_box">Plase, fill the checkbox</string>
    <string name="txt_back">BACK</string>
    <string name="hint_status">Pending</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sing_up">Sing up</string>
    <string name="back">Back</string>
    <string name="db_not_found">Not found</string>
    <string name="hint_incidentDescription">Describe your incident</string>
    <string name="txt_updateIncidences">Update incidences</string>
    <string name="nothing_to_update">"No updates available "</string>
    <string name="hint_barcode">barcode</string>
    <string name="noloands">Congratulations, you don\'t have pending tools</string>
    <string name="txt_updateLoands">Update</string>
    <string name="subject_notification">[Product manager] - Incidence updated</string>
    <string name="msg_notification">Your incident is solved</string>
    <string name="txt_pendingTools">Pending tools:</string>
    <string name="txt_incidencesCreated">Incidences created:</string>
    <string name="txt_totalRentalTools">Total tool used:</string>
    <string name="txt_username">Username</string>
    <string name="hint_enteremail">Write email to search</string>
    <string name="hint_entername">Write name to search</string>
    <string name="db_rentaltool_error">Tool not found or not available</string>
    <string name="db_not_found_renturns">Tool not found in your pending tool history</string>
    <string name="err_project">Select a project to please</string>
    <string name="err_location">Select a location please</string>
    <string name="txt_history">History</string>
</resources>