<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/ic_tools"
        android:title="@string/title_tools" />
    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_person"
        android:title="@string/title_users" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_projects"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_locations"
        android:icon="@drawable/ic_locations"
        android:title="@string/title_locations" />

    <item
        android:id="@+id/navigation_incidences"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_incidents" />

</menu>