<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.productmanager.ui.user.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/user_fragment_home" />

    <fragment
        android:id="@+id/navigation_incidents"
        android:name="com.example.productmanager.ui.user.incidents.IncidentsFragment"
        android:label="@string/title_incidents"
        tools:layout="@layout/user_fragment_incidents" />

    <fragment
        android:id="@+id/navigation_loands"
        android:name="com.example.productmanager.ui.user.loands.LoandsFragment"
        android:label="@string/title_loands"
        tools:layout="@layout/user_fragment_loands" />

    <fragment
        android:id="@+id/navigation_rental"
        android:name="com.example.productmanager.ui.user.rental.RentalFragment"
        android:label="@string/title_rental"
        tools:layout="@layout/user_fragment_rental" />

    <fragment
        android:id="@+id/navigation_returns"
        android:name="com.example.productmanager.ui.user.returns.ReturnsFragment"
        android:label="@string/title_returns"
        tools:layout="@layout/user_fragment_returns" />

</navigation>