<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tools">

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.example.productmanager.ui.admin.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.productmanager.ui.admin.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users" />
    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.productmanager.ui.admin.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.example.productmanager.ui.admin.ui.locations.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_incidences"
        android:name="com.example.productmanager.ui.admin.ui.incidences.IncidencesFragment"
        android:label="@string/title_incidents"
        tools:layout="@layout/fragment_incidences" />


</navigation>