<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/recyclerview_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recyclerview__tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tool"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_user" />
        <TextView
            android:id="@+id/recyclerview_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_barcode"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview__tool" />

        <TextView
            android:id="@+id/recyclerview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_date"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_barcode" />

        <TextView
            android:id="@+id/recyclerview__description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_description"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_date" />

        <Button
            android:id="@+id/btnDeleteAndNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/red"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textColorHighlight="#41E348"
            android:textColorLink="#41E348"
            app:cornerRadius="0dp"
            />

        <CheckBox
            android:id="@+id/recyclerviewCheckbox_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/btnDeleteAndNotify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnDeleteAndNotify"
            app:layout_constraintEnd_toStartOf="@id/btnDeleteAndNotify">
        </CheckBox>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_solved"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/recyclerviewCheckbox_solved"
            app:layout_constraintStart_toStartOf="@id/recyclerviewCheckbox_solved"
            app:layout_constraintTop_toBottomOf="@id/recyclerviewCheckbox_solved">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>