<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:id="@+id/screen_tool">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_user"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/Theme.Design.NoActionBar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topToolbar_user"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@android:color/white"
            app:title="TOOLBAR"
            app:menu="@menu/top_nav_menu"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">
        <ImageView
            android:id="@+id/img_tool"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@color/black"
            android:importantForAccessibility="no">
        </ImageView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_tool"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="30dp"
            android:text="@string/txt_description"
            android:textStyle="bold"
            android:textSize="30dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="10dp"
            android:text="@string/txt_barcode"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_barcode"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="10dp"
            android:text="@string/txt_project"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_project"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="10dp"
            android:text="@string/txt_status"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btnBook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"
            android:backgroundTint="#0D936A"
            android:text="@string/txt_book"
            android:textColor="@color/white"
            android:textColorHighlight="#41E348"
            android:textColorLink="#41E348"
            android:layout_marginTop="30dp"
            app:cornerRadius="0dp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBook"
            android:backgroundTint="@color/red"
            android:text="@string/txt_back"
            android:textColor="@color/white"
            android:textColorHighlight="#41E348"
            android:textColorLink="#41E348"
            android:layout_marginTop="10dp"
            app:cornerRadius="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>