<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/img_tool"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:importantForAccessibility="no">
        </ImageView>

        <TextView
            android:id="@+id/recyclerview_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tool"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_tool"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/recyclerview_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_project"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_tool"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_tool"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/recyclerview_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_date"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_tool"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_project"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/recyclerview_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/hint_status"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_tool"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_start_date"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>